# video-streaming-cpp-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  deploy.sh  docker-compose.yml  dockerfile  run.sh
.github/workflows/: deploy.yml
resources/: config.json
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: MyController.hpp
src/dto/: DTOs.hpp
